--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,36 @@
-<html>
-  hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>我的简单网页</title>
+    <style>
+        /* 这里可以添加 CSS 样式 */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>欢迎来到我的网页</h1>
+    </header>
+
+    <main>
+        <p>这是一个简单的 HTML 网页示例。</p>
+        <p>你可以在这里添加任何内容，比如图片、链接和段落。</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 我的网页</p>
+    </footer>
+
+</body>
 </html>
