--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <script>
         // 获取 Markdown 文件内容
-        fetch('example.md')
+        fetch('1.md')
             .then(response => response.text())
             .then(md => {
                 // 将 Markdown 转换为 HTML 并显示在页面中
