--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的简单网页</title>
+    <title>文档</title>
     <style>
         /* 这里可以添加 CSS 样式 */
         body {
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <h1>欢迎来到我的网页</h1>
+        <h1 align = center>欢迎来到我的网页</h1>
     </header>
 
     <main>
