--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </header>
 
     <main>
-        <p>这是一个简单的 HTML 网页示例。</p>
-        <p>你可以在这里添加任何内容，比如图片、链接和段落。</p>
+        <p align = center>这是一个简单的 HTML 网页示例。</p>
+        <p align = center>你可以在这里添加任何内容，比如图片、链接和段落。</p>
     </main>
 
     <footer>
-        <p>&copy; 2023 我的网页</p>
+        <p align =center>&copy; 2023 我的网页</p>
     </footer>
 
 </body>
