--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <p align = center>这是一个简单的 HTML 网页示例。</p>
-        <p align = center>你可以在这里添加任何内容，比如图片、链接和段落。</p>
+        <p align = center>目前还没有更新任何东西，敬请期待后续的更新</p>
     </main>
 
     <footer>
