--- a/index.html
+++ b/index.html
@@ -20,17 +20,79 @@
     }
 
     nav {
+      margin: 10px auto 0;
+      position: relative;
+      width: 600px;
+      height: 50px;
       background-color: #444;
-      color: white;
-      text-align: center;
-      padding: 10px 0;
+      border-radius: 8px;
     }
 
     nav a {
-      color: white;
+      line-height: 50px;
+      height: 100%;
+      font-size: 15px;
+      display: inline-block;
+      position: relative;
+      z-index: 1;
       text-decoration: none;
-      margin: 0 10px;
+      text-align: center;
+      color: #fff;
+      cursor: pointer;
     }
+
+    nav .animation{
+      position: absolute;
+      height: 100%;
+      top: 0;
+      z-index: 0;
+      transition: all .5s ease;
+      border-radius: 8px;
+    }
+
+    a:nth-child(1){
+      width: 150px;
+    }
+
+    a:nth-child(2){
+      width: 150px;
+    }
+
+    a:nth-child(3){
+      width: 150px;
+    }
+
+    a:nth-child(4){
+      width: 125px;
+    }
+
+
+
+    a:nth-child(1):hover~.animation{
+      width: 150px;
+      left: 0;
+      background-color: aqua;
+    }
+
+    a:nth-child(2):hover~.animation{
+      width: 150px;
+      left: 150px;
+      background-color: aqua;
+    }
+
+    a:nth-child(3):hover~.animation{
+      width: 150px;
+      left: 300px;
+      background-color: aqua;
+    }
+
+    a:nth-child(4):hover~.animation{
+      width: 150px;
+      left: 450px;
+      background-color: aqua;
+    }
+
+
 
     main {
       padding: 20px;
@@ -65,6 +127,7 @@
     <a href="#">关于我们</a>
     <a href="#">服务</a>
     <a href="#">联系我们</a>
+    <div class="animation"></div>
   </nav>
 
   <main>
