--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <a href="#">首页</a>
     <a href="#">关于我们</a>
     <a href="#">服务</a>
-    <a href="#">联系我们</a>
+    <a href="https://github.com/tangwenlongNO1/tangwenlongNO1.github.io">联系我们</a>
     <div class="animation"></div>
   </nav>
 
