--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
     }
 
     a:nth-child(1){
-      width: 150px;
+      width: 145px;
     }
 
     a:nth-child(2){
-      width: 150px;
+      width: 145px;
     }
 
     a:nth-child(3){
-      width: 150px;
+      width: 145px;
     }
 
     a:nth-child(4){
-      width: 125px;
+      width: 145px;
     }
 
 
@@ -126,7 +126,7 @@
     <a href="#">首页</a>
     <a href="#">关于我们</a>
     <a href="#">服务</a>
-    <a href="https://github.com/tangwenlongNO1/tangwenlongNO1.github.io">联系我们</a>
+    <a href="https://github.com/tangwenlongNO1/tangwenlongNO1.github.io" target="_blank">联系我们</a>
     <div class="animation"></div>
   </nav>
 
