--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </header>
 
   <nav>
-    <a href="#">首页</a>
+    <a href="https://tangwenlongno1.github.io/">首页</a>
     <a href="#">关于我们</a>
     <a href="#">服务</a>
     <a href="https://github.com/tangwenlongNO1/tangwenlongNO1.github.io" target="_blank">联系我们</a>
